--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -49,8 +49,30 @@
 
 .node-wall {
   background-color: rgb(12, 53, 71);
+  animation-name: wallAnimation;
+  animation-duration: 0.075s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-play-state: running;
 }
 
+@keyframes wallAnimation {
+  0% {
+    transform: scale(0.5);
+    background-color: rgb(12, 53, 69);
+    border-radius: 25%;
+  }
+  75% {
+    transform: scale(1.2);
+    background-color: rgb(12, 53, 69);
+  }
+  100% {
+    transform: scale(1);
+    background-color: rgb(12, 53, 90);
+  }
+}
 .node-shortest-path {
   background-color: yellow;
 }
