--- a/src/PathfindingVisualizer/PathfindingVisualizer.css
+++ b/src/PathfindingVisualizer/PathfindingVisualizer.css
@@ -1,5 +1,8 @@
 .grid {
-  margin: 50px 0 0;
+  /* margin: 50px 0 0 0; */
+  margin-top: 30px;
+  /*display: flex;
+  flex-direction: column; */
 }
 
 #counters {
@@ -13,10 +16,18 @@
 }
 
 #btn {
+  font-size: 15px;
   margin-right: 20px;
   background-color: mediumturquoise;
   color: white;
   padding: 10px;
   text-align: center;
   box-shadow: 5px 5px 10px grey;
+}
+
+#speed_dropdown {
+  font-size: 15px;
+  position: relative;
+  display: inline-block;
+  padding: 10px;
 }
