--- a/src/PathfindingVisualizer/PathfindingVisualizer.css
+++ b/src/PathfindingVisualizer/PathfindingVisualizer.css
@@ -24,10 +24,10 @@
   text-align: center;
   box-shadow: 5px 5px 10px grey;
 }
-
-#speed_dropdown {
+select {
   font-size: 15px;
   position: relative;
   display: inline-block;
   padding: 10px;
+  margin-right: 20px;
 }
